<?xml version="1.0" encoding="utf-8"?>

<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_favourite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="30sp"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:context=".activities.EditFavouriteActivity"
            android:layout_below="@id/tvNew"
            android:layout_margin="15dp"/>

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_margin="15dp"/>

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_check_black_24dp"
            android:layout_margin="15dp"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/etFavName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/map"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/favourite_place_name"/>

        <EditText
            android:id="@+id/etFavDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFavName"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:maxLines="1"
            android:hint="@string/description"/>

        <Button
            android:id="@+id/btnSelectImg"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_below="@+id/etFavDescription"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_below="@+id/btnSelectImg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/ivImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/etFavDescription"
            android:layout_toRightOf="@id/btnSelectImg"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/delete"
            android:layout_margin="20dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>